kubernetes/services/vaultwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    name: vaultwarden
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
